--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-
     <!-- HTML Meta Tags -->
     <title>Shiny Measure</title>
+    <meta charset="utf-8" />
     <meta name="description" content="Measure and track your weight." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://fildon.me/shiny-measure" />
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
+  <body class="stack">
     <div id="root"></div>
   </body>
   <script src="index.js"></script>
