--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,7 @@
       name="twitter:image"
       content="https://raw.githubusercontent.com/fildon/train-ride/main/train-ride.png"
     />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
