🦄 offline service worker

--- a/static/index.html
+++ b/static/index.html
@@ -37,5 +37,10 @@
   <body class="stack">
     <div id="root"></div>
   </body>
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("serviceWorker.js");
+    }
+  </script>
   <script src="index.js"></script>
 </html>
