--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,16 @@
       name="twitter:image"
       content="https://raw.githubusercontent.com/fildon/train-ride/main/train-ride.png"
     />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
+    <script src="index.tsx" type="module"></script>
   </head>
 
-  <body class="stack">
+  <body>
     <div id="root"></div>
   </body>
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("serviceWorker.js");
-    }
-  </script>
-  <script src="index.js"></script>
 </html>
